...
        //Spacer(Modifier.weight(1f))

        Button(
            onClick = { onCompletionChange(task, !task.isCompleted) },
            modifier = Modifier
                .fillMaxWidth()
                .testTag("completeTaskButton")
        ) {
            Text(if (task.isCompleted) strings.markUncompleted else strings.markCompleted)
        }
    }
}

